--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@next/font": "13.0.7",
     "@react-three/drei": "^9.46.7",
     "@react-three/fiber": "^8.9.1",
+    "@react-three/postprocessing": "^2.7.0",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.7",
     "ethers": "^5.7.2",
